tools/common_debugging.txt
Categories Explained
SOLUTION: - something that worked
THOUGHTS: - Thoughts on the source of the problem
NOTES: - some insight
THINGS ATTEMPTED: - a record of things that were tried

#-------------------------------------------------------------------
main.cpp:5:28: error: ‘cout’ is not a member of ‘std’
     virtual void method() {std::cout << "from Base" << std::endl;}
                            ^
main.cpp:5:56: error: ‘endl’ is not a member of ‘std’
     virtual void method() {std::cout << "from Base" << std::endl;}

SOLUTION: this is when there is a "#include <iostream>" missing
#-------------------------------------------------------------------
